# restaurant-platform-menu-service

./: .env.example  .pre-commit-config.yaml  DECISIONS.md  LICENSE  LOCALSTACK.md  README.md  claude_instructions.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: init-localstack.sh  start-dev-dynamodb.py
src/: main.py
src/api/: categories.py  health.py  menu_items.py
src/models/: category.py  menu_item_model.py
src/observability/: __init__.py  tracing.py
src/repositories/: category_repository.py  menu_item_repository.py
src/security/: __init__.py  api_key_validator.py
tests/component/: test_api_delete_item.py  test_api_get_categories.py  test_api_get_item.py  test_api_health.py  test_api_menu_items.py  test_api_post_category.py  test_api_post_item.py  test_api_put_item.py  test_api_restaurant_authorization.py  test_category_repository.py  test_menu_item_repository.py  test_menu_item_repository_tracing.py  test_tracing.py
tests/unit/: test_api_key_validator.py  test_category.py  test_example.py  test_main.py  test_menu_item.py
